<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/activity_detail_mujer"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Switch
        android:text="@string/estasEmbarazada"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/tieneHijos"
        android:layout_weight="0.02" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/semanasGestacion"
        android:layout_weight="0.12"
        android:hint="@string/semanasGestacion" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEmbarazoEnRiesgo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.01"
        android:spinnerMode="dialog" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/numHijosNacidosVivos"
        android:layout_weight="0.12"
        android:hint="@string/numHijosNacidosVivos" />
</LinearLayout>
